<resources>
    <string name="app_name">TVPad</string>
    <string name="edtusernum">请输入账号</string>
    <string name="edtpassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="confirmchangepwd">确认修改</string>
    <string name="edtoldpwd">请输入原密码</string>
    <string name="edtnewpwd">请输入新密码</string>
    <string name="confirmnewpwd">请确认新密码</string>
    <string name="device">设备管理</string>
    <string name="lignt">灯光控制</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
</resources>
