<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.MainActivity">
    
    <ImageView
        android:layout_width="@dimen/dp_65"
        android:layout_height="@dimen/dp_32"
        android:src="@drawable/logo"
        android:layout_marginBottom="@dimen/dp_20"
        />
     <EditText
         android:padding="@dimen/dp_6"
         android:id="@+id/et_username"
         android:layout_width="@dimen/dp_210"
         android:layout_height="wrap_content"
         android:hint="@string/edtusernum"
         android:background="@drawable/edt_username"
         android:textColorHint="@color/white"
         android:layout_marginBottom="@dimen/dp_10"
         android:textSize="@dimen/sp_9"
         />
    <EditText
        android:padding="@dimen/dp_6"
        android:id="@+id/et_password"
        android:layout_width="@dimen/dp_210"
        android:layout_height="wrap_content"
        android:hint="@string/edtpassword"
        android:background="@drawable/edt_username"
        android:textColorHint="@color/white"
        android:layout_marginBottom="@dimen/dp_18"
        android:inputType="textPassword"
        android:textSize="@dimen/sp_9"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/dp_210"
        android:layout_height="@dimen/dp_25"
        android:text="@string/login"
        android:textSize="@dimen/sp_10"
        android:textColor="@color/white"
        android:background="@drawable/btn_login"
        />

</LinearLayout>