<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/changepasswordbg"
    tools:context=".activity.ChangePwdActivity">
    <ImageView
        android:id="@+id/img_pwdback"
        android:visibility="gone"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:src="@drawable/icon_back"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_10"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/et_oldpwd"
            android:layout_width="@dimen/dp_210"
            android:layout_height="@dimen/dp_25"
            android:hint="@string/edtoldpwd"
            android:layout_gravity="center"
            android:background="@drawable/changepwdbg"
            android:textColorHint="@color/white"
            android:layout_marginBottom="@dimen/dp_10"
            android:textSize="@dimen/sp_9"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_32"
            />
        <EditText
            android:id="@+id/et_newpwd"
            android:layout_width="@dimen/dp_210"
            android:layout_height="@dimen/dp_25"
            android:hint="@string/edtnewpwd"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:background="@drawable/changepwdbg"
            android:textColorHint="@color/white"
            android:layout_marginBottom="@dimen/dp_10"
            android:textSize="@dimen/sp_9"
            android:paddingLeft="@dimen/dp_32"
            />
        <EditText
            android:id="@+id/et_confirmnewpwd"
            android:layout_width="@dimen/dp_210"
            android:layout_height="@dimen/dp_25"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/confirmnewpwd"
            android:background="@drawable/changepwdbg"
            android:textColorHint="@color/white"
            android:layout_marginBottom="@dimen/dp_18"
            android:textSize="@dimen/sp_9"
            android:paddingLeft="@dimen/dp_32"
            />
        <Button
            android:id="@+id/btn_confirmchange"
            android:layout_width="@dimen/dp_210"
            android:layout_height="@dimen/dp_25"
            android:text="@string/confirmchangepwd"
            android:layout_gravity="center"
            android:textSize="@dimen/sp_10"
            android:textColor="@color/white"
            android:background="@drawable/btn_login"
            />
    </LinearLayout>

</RelativeLayout>